implemented JWT authentication and authorization